[package]
name = "webview-sys"
version = "5.5.7"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]
description = "Raw bindings to snuk182's fork of Webview browser library"
homepage = "https://github.com/snuk182/webview-sys-rs"
repository = "https://github.com/snuk182/webview-sys-rs"
license = "MIT OR Apache-2.0"
build = "build.rs"
links = "webview"

[lib]
name = "webview_sys"
path = "src/lib.rs"

[dependencies]
libc = "~0.2"

[features]
win32 = []
gtk3 = []
qt5 = []
cocoa = []
default = []

[build-dependencies]
cmake = { version = "^0.1", git = "https://github.com/snuk182/cmake-rs" }
cc = { version = "~1.1", optional = true }
embed-resource = { version = "~1.3", optional = true }
pkg-config = { version = "^0.3", optional = true }
fs_extra = { version = "~1.1", optional = true }
bindgen = "0.71"
